fix: alignment of logo in all pages in media query iphone 6 portrait view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -686,10 +686,13 @@ input[type=reset]{
       line-height: 30px;
       padding-top: 10px;
       font-weight: bold;
-      position: absolute;
+
+      /*position: absolute;
       top: 20px;
+      left: 0px;*/
+
       margin-bottom: 10px;
-      margin-left: 70px;    
+      margin-left: 40px;    
   }     
   nav li {
       background-color: grey;
